# keeper-desktop

./: .eslintrc.json  .gitignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  temp_key.asc
.github/workflows/: ci.yml  dev-release.yml  pgp-sign-release.yml  release.yml  tauri-build.yml
public/: btcpay.html  splashscreen.html
scripts/: get-hwi.ts
scripts/resources/: achow-key.asc
src/: App.tsx  index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: channel.rs  device.rs  hwi.rs  main.rs  miniscript_hwi.rs
src-tauri/src/hwi/: error.rs  implementations.rs  interface.rs  types.rs
src-tauri/src/hwi/implementations/: binary_implementation.rs  python_implementation.rs
src/components/DeviceItem/: DeviceItem.module.css  DeviceItem.tsx
src/components/ExpandableError/: ExpandableError.module.css  ExpandableError.tsx
src/components/LoadingSpinner/: LoadingSpinner.module.css  LoadingSpinner.tsx
src/config/: config.ts
src/helpers/: devices.ts
src/hooks/: useDeviceActions.tsx  useModalState.tsx
src/modals/: ModalManager.tsx  index.ts
src/modals/BaseModal/: BaseModal.module.css  BaseModal.tsx
src/modals/DeviceActionModal/: DeviceActionModal.module.css  DeviceActionModal.tsx
src/modals/DeviceActionSuccessModal/: DeviceActionSuccessModal.module.css  DeviceActionSuccessModal.tsx
src/modals/DeviceNotFoundModal/: DeviceNotFoundModal.module.css  DeviceNotFoundModal.tsx
src/modals/ErrorModal/: ErrorModal.module.css  ErrorModal.tsx
src/modals/MultipleDevicesModal/: MultipleDevicesModal.module.css  MultipleDevicesModal.tsx
src/modals/SubscriptionsModal/: SubscriptionsModal.module.css  SubscriptionsModal.tsx
src/modals/TrezorPinModal/: TrezorPinModal.module.css  (+1 more)
src/services/: hwiService.ts
src/styles/: fira-sans.css
(+8 files in other folders)
